--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,8 @@ jobs:
 
       - name: Install mdbook
         run: |
-          (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
-          (test -x $HOME/.cargo/bin/mdbook || cargo install --vers "^0.3" mdbook)
-          cargo install-update -a
+          wget https://github.com/rust-lang/mdBook/releases/download/v0.4.12/mdbook-v0.4.12-x86_64-unknown-linux-gnu.tar.gz
+          tar xvf mdbook-v0.4.12-x86_64-unknown-linux-gnu.tar.gz
 
       - name: Build and test site
         run: |
