--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,11 +15,12 @@ jobs:
         run: |
           wget https://github.com/rust-lang/mdBook/releases/download/v0.4.12/mdbook-v0.4.12-x86_64-unknown-linux-gnu.tar.gz
           tar xvf mdbook-v0.4.12-x86_64-unknown-linux-gnu.tar.gz
+          chmod +x ./mdbook
 
       - name: Build and test site
         run: |
-          mdbook build
-          mdbook test
+          ./mdbook build
+          ./mdbook test
           cp CNAME ./book/CNAME
 
       - name: Deploy
