--- a/book.toml
+++ b/book.toml
@@ -4,6 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Shroom Kingdom Whitepaper"
+git-repository-url = "https://github.com/Shroom-Kingdom"
+cname = "whitepaper.shroomkingdom.net"
 
 [output.html]
 default-theme = "ayu"
+# additional-js = "js/charts.js"
