--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           ./mdbook build
           ./mdbook test
+          cp CNAME ./book/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
